# skytrans

./: .env  .gitignore  CMakeLists.txt  README.md  go.mod  go.sum
cfg/: stencil_unit_test.json
cmd/gomongo/: exchange.go  gomongo.go
cmd/gotrans/: gotrans.go
gotrans/: gotrans.go
include/skytrans/: TransportClient.h  client++.h
include/stencil/: stencil.h
lib/: CMakeLists.txt
lib/proto/: CMakeLists.txt  endpointsecurity.proto  event.proto  example.proto  stencil.proto  transport.proto
lib/skytrans/: CMakeLists.txt  TransportClient.cpp
lib/stencil/: CMakeLists.txt  stencil.cpp
proto/: CMakeLists.txt  skyproto.proto  stencil.proto
tests/unit_tests/: CMakeLists.txt  main.cpp  stencil_unit_test.cpp  transport_unit_test.cpp
transport/: stencil.pb.go  transport.pb.go  transport_grpc.pb.go
