cmake_minimum_required(VERSION 3.15)

set(TARGETNAME skytrans)

add_library(${TARGETNAME} STATIC)

set(TARGET_INC_DIR ${PROJECT_SOURCE_DIR}/include/${TARGETNAME})
set(_INC_DIRS 
    ${TARGET_INC_DIR}
    ${PROJECT_BINARY_DIR}/skytransproto
)

include_directories(${TARGETNAME} ${_INC_DIRS})

set(_SOURCES TransportClient.cpp)
set(_HEADERS ${TARGET_INC_DIR}/TransportClient.h)

target_sources(${TARGETNAME}
    PRIVATE ${_SOURCES}
    PUBLIC FILE_SET HEADERS
    BASE_DIRS ${TARGET_INC_DIR}
    FILES ${_HEADERS}
)

target_link_libraries(${TARGETNAME} skytransproto ${_GRPC_GRPCPP_UNSECURE} ${_PROTOBUF_LIBPROTOBUF})

install(TARGETS ${TARGETNAME}
    EXPORT skytransConfig
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    FILE_SET HEADERS DESTINATION  ${CMAKE_INSTALL_INCLUDEDIR}/${TARGETNAME}
)

export(TARGETS
    ${TARGETNAME}
    NAMESPACE skytrans::
    FILE "${CMAKE_CURRENT_BINARY_DIR}/skytransConfig.cmake"
)

install(EXPORT
    skytransConfig
    DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake"
    NAMESPACE skytrans::
)